# saglikocagiverisistemi

./: CMakeLists.txt  main.cpp
Ui/: anapencere.cpp  anapencere.h  anapencere.ui
Ui/veri-giris/: doktorekle.cpp  doktorekle.h  doktorekle.ui  hastaekle.cpp  hastaekle.h  hastaekle.ui
Ui/veri-liste/: doktorliste.cpp  doktorliste.h  doktorliste.ui  hastaliste.cpp  hastaliste.h  hastaliste.ui
Veri/: anapencere.cpp  anapencere.h  anapencere.ui  veritabani.cpp  veritabani.h
Veri/Araclar/: TABLO.h  TABLO_TANIMLARI.h  enums.h
Veri/Siniflar/: bulgu.cpp  bulgu.h  doktor.cpp  doktor.h  hasta.cpp  hasta.h  idlisinif.cpp  idlisinif.h  ilac.cpp  ilac.h  insan.cpp  insan.h  istenentetkik.cpp  istenentetkik.h  recete.cpp  recete.h  recetekalemi.cpp  recetekalemi.h  tetkik.cpp  tetkik.h  ziyaret.cpp  ziyaret.h
kaynakdosyaları/: resource.qrc
